se corrigen 2 fotos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          </div>
          <div class="thumbnail">
             <div class="thumbnail-user">
-               <img class="thumbnail-img" src="./assets/img/Cristian.jpg" alt="Foto Perfil de Usuario">
+               <img class="thumbnail-img" src="./assets/img/cristian.jpg" alt="Foto Perfil de Usuario">
                <div class="thumbnail-data">
                   <p class="text-md">Cristian</p>
                   <p class="text-sm">Inicia un chat nuevo</p>
@@ -78,7 +78,7 @@
          </div>
          <div class="thumbnail">
             <div class="thumbnail-user">
-               <img class="thumbnail-img" src="./assets/img/Gonzalo.jpg" alt="Foto Perfil de Usuario">
+               <img class="thumbnail-img" src="./assets/img/gonzalo.jpg" alt="Foto Perfil de Usuario">
                <div class="thumbnail-data">
                   <p class="text-md">Gonzalo</p>
                   <p class="text-sm">Inicia un chat nuevo</p>
